--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta name="description" content="Hi, I'm Benjamin Dinh. Welcome to my personal website!">
 		<meta name="keywords" content="benjamin dinh, benjamin, benjamin-dinh, ben dinh, uc davis">
 		<meta property="og:title" content="Benjamin Dinh | Portfolio" />
-		<meta name="image" property="og:image" content="%PUBLIC_URL%/assets/preview.png"/>
+		<meta name="image" property="og:image" content="assets/preview.png"/>
 		<meta name="author" content="Benjamin Dinh" />
 		<meta property="og:description" content="Hi, I'm Benjamin Dinh. Welcome to my personal website!"/>
 		<meta property="og:url" content="https://benjamindinh.com" />
