--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
 							<a class="nav-link js-scroll-trigger inactive" href="/about">ABOUT</a>
 						</li>
+						<li class="nav-item" data-toggle="collapse" data-target=".navbar-collapse.show">
+							<a class="nav-link js-scroll-trigger" href="mailto:benjaminhdinh@gmail.com">CONTACT</a>
+						</li>
 						<!-- <li class="nav-item">
 							<a class="nav-link js-scroll-trigger inactive" href="assets/Benjamin_Dinh_Resume.pdf">RESUME</a>
 						</li> -->
